--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "node-sass": "^4.5.3",
     "nodemailer": "^4.6.2",
     "nodemon": "^1.11.0",
+    "npm": "^5.7.1",
     "postcss-loader": "^2.0.6",
     "react": "^15.6.1",
     "react-device-detect": "^0.1.0",
