--- a/package.json
+++ b/package.json
@@ -26,14 +26,15 @@
     "express": "^4.15.4",
     "extract-text-webpack-plugin": "^3.0.0",
     "html-webpack-plugin": "^2.30.1",
+    "jquery": "^3.3.1",
     "lodash": "^4.17.5",
     "mongoose": "^4.11.7",
     "node-sass": "^4.5.3",
     "nodemailer": "^4.6.2",
     "nodemon": "^1.11.0",
-    "npm": "^5.7.1",
     "postcss-loader": "^2.0.6",
     "react": "^15.6.1",
+    "react-bootstrap": "^0.32.1",
     "react-device-detect": "^0.1.0",
     "react-dom": "^15.6.1",
     "react-hot-loader": "^3.0.0-beta.6",
